# l4_project

./: .gitignore  .gitmodules  plan.md  timelog.md
data/: client.rs  server.rs  sockets.csv  taps_example.csv  test.sh
data/processed/: multi.ods  sockets.ods
data/raw/multi/: sockets.csv  taps.csv
dissertation/: Makefile  analysis_requirements.tex  background.tex  design.tex  evaluation.tex  implementation.tex  l4proj.bib  l4proj.cls  l4proj.tex  listings-rust.sty  todo_comments.md
dissertation/diagrams/: Makefile  flow.dot  lidecycle.dia  lifecycle.dot  recv.dot  send.dot
sockets/: CMakeLists.txt  main.c
status_report/: status_report.tex
summer/: readme.md
taps/: Cargo.toml
taps/src/: main.rs
