[package]
name = "taps_example"
version = "0.1.0"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taps = { path = "../src"}
tokio = { version = "0.2", features = ["full"] }